crates/ars-i18n/tests/ui/translate_empty_placeholder.rs
use ars_i18n::Translate;

#[derive(Translate)]
#[translate(fallback = "en")]
enum BadText {
    #[translate(en = "{} items")]
    Count { count: usize },
}

fn main() {}
